fixed overflow scroll for dialogs

--- a/trunk/war/styles/index.css
+++ b/trunk/war/styles/index.css
@@ -93,7 +93,7 @@ a:hover {
 }
 
 .dialog {
-    position: fixed;
+    position: absolute;
     left: 20%;
     top: 90px;
     width: 60%;
@@ -101,6 +101,8 @@ a:hover {
     background: #EEFFEE;
     border: 4px solid #112211;
     z-index: 1050;
+    max-height: 100%;
+    overflow-y: auto;
     display: none;
 }
 
@@ -118,11 +120,6 @@ a:hover {
 .done {
     font-size: 24px;
     text-align: center;
-}
-
-#help_screen {
-    height: 560px;
-    overflow-y: auto; 	
 }
 
 #help_screen h2 {
